--- a/mysite/notes.html
+++ b/mysite/notes.html
@@ -12,6 +12,7 @@
 		<li>git push</li>
 		<li>git checkout branch</li>
 		<li>browser-sync start --server --directory --files "*"</li>
+		<li>viewport meta tag for mobile, 12 grid layout </li>
 	</ul>
 	<h1>links</h1>
 	<ul>
@@ -28,7 +29,9 @@
 		<li><a href="https://www.w3.org/TR/2011/WD-html5-20110525/content-models.html#kinds-of-content">Block(Flow), Inline(Phrasing)</a></li>
 		<li><a href="https://github.com/jhu-ep-coursera/fullstack-course4/blob/master/FAQ.md">FAQ</a></li>
 		<li><a href="https://github.com/jhu-ep-coursera/fullstack-course4/blob/master/FAQ.md#q-how-to-ask-and-get-your-question-answered-a-must-read">Asking questions: Must Read</a></li>
-		<li><a href="https://clearlydecoded.com/">Instructors Website</a>
+		<li><a href="https://clearlydecoded.com/">Instructors Website</a></li>
+		<li><a href="http://www.csszengarden.com/">CSS examples - Zen Garden</a></li>
+		<li><a href="https://css-tricks.com/">CSS Tricks</a></li>
 	</ul>
 	</body>
 	</html>	
